# golem-chatbot

./: README.md  api-calls.sh
.github/workflows/: ci.yml
components-rust/golem-chatbot/: Cargo.toml  golem.yaml
components-rust/golem-chatbot/src/: lib.rs
components-rust/golem-chatbot/wit/: golem-chatbot.wit
